--- a/pruebasTFG.ipynb
+++ b/pruebasTFG.ipynb
@@ -209,6 +209,79 @@
         "feature_extractor.parse_cards(input_zip_file = raw_cards, output_file = output_file)\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Episode 1/1000: Total Reward: 0.19999999999999996\n",
+            "Episode 2/1000: Total Reward: 0.6000000000000001\n",
+            "Episode 3/1000: Total Reward: -0.19999999999999996\n",
+            "Episode 4/1000: Total Reward: -0.19999999999999996\n",
+            "Episode 5/1000: Total Reward: -0.19999999999999996\n",
+            "Episode 6/1000: Total Reward: 0.8\n",
+            "Episode 7/1000: Total Reward: 1.0\n",
+            "Episode 8/1000: Total Reward: 0.19999999999999996\n",
+            "Episode 9/1000: Total Reward: 1.0\n",
+            "Episode 10/1000: Total Reward: 0.6000000000000001\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Exception ignored in: <bound method IPythonKernel._clean_thread_parent_frames of <ipykernel.ipkernel.IPythonKernel object at 0x00000169A712DDE0>>\n",
+            "Traceback (most recent call last):\n",
+            "  File \"c:\\Users\\Admin\\OneDrive\\Escritorio\\TFG\\.venv\\lib\\site-packages\\ipykernel\\ipkernel.py\", line 788, in _clean_thread_parent_frames\n",
+            "    if phase != \"start\":\n",
+            "KeyboardInterrupt: \n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Episode 11/1000: Total Reward: -0.19999999999999996\n",
+            "Episode 12/1000: Total Reward: 1.0\n",
+            "Episode 13/1000: Total Reward: -0.19999999999999996\n",
+            "Episode 14/1000: Total Reward: 1.0\n",
+            "Episode 15/1000: Total Reward: 0.8\n",
+            "Episode 16/1000: Total Reward: -1.0\n",
+            "Episode 17/1000: Total Reward: 0.0\n",
+            "Episode 18/1000: Total Reward: 0.0\n",
+            "Episode 19/1000: Total Reward: -1.0\n",
+            "Episode 20/1000: Total Reward: -0.6\n",
+            "Episode 21/1000: Total Reward: 0.6000000000000001\n",
+            "Episode 22/1000: Total Reward: -0.19999999999999996\n",
+            "Episode 23/1000: Total Reward: -1.0\n",
+            "Episode 24/1000: Total Reward: -0.8\n",
+            "Episode 25/1000: Total Reward: -0.6\n",
+            "Episode 26/1000: Total Reward: 0.3999999999999999\n",
+            "Episode 27/1000: Total Reward: 1.0\n",
+            "Episode 28/1000: Total Reward: -0.4\n",
+            "Episode 29/1000: Total Reward: 0.3999999999999999\n",
+            "Episode 30/1000: Total Reward: -0.6\n",
+            "Episode 31/1000: Total Reward: 0.0\n",
+            "Episode 32/1000: Total Reward: -0.4\n"
+          ]
+        }
+      ],
+      "source": [
+        "from deckBuilder.DeckBuilder import DeckBuilderEnv\n",
+        "from deckBuilder.utils.q_learning import QLearningAgent\n",
+        "\n",
+        "# Ejemplo de uso del agente Q-learning con tu entorno\n",
+        "env = DeckBuilderEnv(n=10, k=5, history=True, parsed_cards_file='outputFiles\\parsedCards.json')\n",
+        "agent = QLearningAgent(env)\n",
+        "\n",
+        "# Entrenamiento\n",
+        "agent.train(episodes=1000)"
+      ]
     }
   ],
   "metadata": {
@@ -230,7 +303,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.12"
+      "version": "3.10.0"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
