--- a/pruebasTFG.ipynb
+++ b/pruebasTFG.ipynb
@@ -267,13 +267,36 @@
             "Episode 29/1000: Total Reward: 0.3999999999999999\n",
             "Episode 30/1000: Total Reward: -0.6\n",
             "Episode 31/1000: Total Reward: 0.0\n",
-            "Episode 32/1000: Total Reward: -0.4\n"
+            "Episode 32/1000: Total Reward: -0.4\n",
+            "Episode 33/1000: Total Reward: 0.8\n",
+            "Episode 34/1000: Total Reward: 0.0\n",
+            "Episode 35/1000: Total Reward: -0.8\n",
+            "Episode 36/1000: Total Reward: -1.0\n",
+            "Episode 37/1000: Total Reward: 0.0\n",
+            "Episode 38/1000: Total Reward: -1.0\n",
+            "Episode 39/1000: Total Reward: -0.4\n",
+            "Episode 40/1000: Total Reward: -0.8\n"
+          ]
+        },
+        {
+          "ename": "KeyboardInterrupt",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[1], line 9\u001b[0m\n\u001b[0;32m      6\u001b[0m agent \u001b[38;5;241m=\u001b[39m QLearningAgent(env)\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m# Entrenamiento\u001b[39;00m\n\u001b[1;32m----> 9\u001b[0m \u001b[43magent\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43mepisodes\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1000\u001b[39;49m\u001b[43m)\u001b[49m\n",
+            "File \u001b[1;32mc:\\Users\\Admin\\OneDrive\\Escritorio\\TFG\\deckBuilder\\utils\\q_learning.py:57\u001b[0m, in \u001b[0;36mQLearningAgent.train\u001b[1;34m(self, episodes)\u001b[0m\n\u001b[0;32m     55\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m done:\n\u001b[0;32m     56\u001b[0m     action \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mchoose_action()\n\u001b[1;32m---> 57\u001b[0m     next_state, reward, done, _ \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43menv\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstep\u001b[49m\u001b[43m(\u001b[49m\u001b[43maction\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     59\u001b[0m     \u001b[38;5;66;03m# Aprende del paso\u001b[39;00m\n\u001b[0;32m     60\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlearn(action, reward, next_state)\n",
+            "File \u001b[1;32mc:\\Users\\Admin\\OneDrive\\Escritorio\\TFG\\deckBuilder\\DeckBuilder.py:64\u001b[0m, in \u001b[0;36mDeckBuilderEnv.step\u001b[1;34m(self, action)\u001b[0m\n\u001b[0;32m     62\u001b[0m     done \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m     63\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m---> 64\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mavailable_cards \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgenerate_random_cards\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mparsed_cards_file\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     65\u001b[0m     done \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[0;32m     66\u001b[0m     reward \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m \n",
+            "File \u001b[1;32mc:\\Users\\Admin\\OneDrive\\Escritorio\\TFG\\deckBuilder\\DeckBuilder.py:32\u001b[0m, in \u001b[0;36mDeckBuilderEnv.generate_random_cards\u001b[1;34m(self, parsed_cards_file)\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mgenerate_random_cards\u001b[39m(\u001b[38;5;28mself\u001b[39m, parsed_cards_file: \u001b[38;5;28mstr\u001b[39m):\n\u001b[0;32m     31\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(parsed_cards_file, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m json_in:\n\u001b[1;32m---> 32\u001b[0m         parsed_cards \u001b[38;5;241m=\u001b[39m \u001b[43mjson\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mjson_in\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     34\u001b[0m         random_cards \u001b[38;5;241m=\u001b[39m random\u001b[38;5;241m.\u001b[39msample(parsed_cards, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mk)\n\u001b[0;32m     36\u001b[0m         parsed_cards \u001b[38;5;241m=\u001b[39m []\n",
+            "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\json\\__init__.py:293\u001b[0m, in \u001b[0;36mload\u001b[1;34m(fp, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[0m\n\u001b[0;32m    274\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mload\u001b[39m(fp, \u001b[38;5;241m*\u001b[39m, \u001b[38;5;28mcls\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, object_hook\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, parse_float\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[0;32m    275\u001b[0m         parse_int\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, parse_constant\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, object_pairs_hook\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkw):\n\u001b[0;32m    276\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Deserialize ``fp`` (a ``.read()``-supporting file-like object containing\u001b[39;00m\n\u001b[0;32m    277\u001b[0m \u001b[38;5;124;03m    a JSON document) to a Python object.\u001b[39;00m\n\u001b[0;32m    278\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    291\u001b[0m \u001b[38;5;124;03m    kwarg; otherwise ``JSONDecoder`` is used.\u001b[39;00m\n\u001b[0;32m    292\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 293\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m loads(\u001b[43mfp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m,\n\u001b[0;32m    294\u001b[0m         \u001b[38;5;28mcls\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mcls\u001b[39m, object_hook\u001b[38;5;241m=\u001b[39mobject_hook,\n\u001b[0;32m    295\u001b[0m         parse_float\u001b[38;5;241m=\u001b[39mparse_float, parse_int\u001b[38;5;241m=\u001b[39mparse_int,\n\u001b[0;32m    296\u001b[0m         parse_constant\u001b[38;5;241m=\u001b[39mparse_constant, object_pairs_hook\u001b[38;5;241m=\u001b[39mobject_pairs_hook, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkw)\n",
+            "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
           ]
         }
       ],
       "source": [
         "from deckBuilder.DeckBuilder import DeckBuilderEnv\n",
-        "from deckBuilder.utils.q_learning import QLearningAgent\n",
+        "from deckBuilder.learning_agents.q_learning import QLearningAgent\n",
         "\n",
         "# Ejemplo de uso del agente Q-learning con tu entorno\n",
         "env = DeckBuilderEnv(n=10, k=5, history=True, parsed_cards_file='outputFiles\\parsedCards.json')\n",
