--- a/pruebasTFG.ipynb
+++ b/pruebasTFG.ipynb
@@ -106,7 +106,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -116,11 +116,21 @@
       },
       "outputs": [
         {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\Admin\\OneDrive\\Escritorio\\TFG\\.venv\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "  from .autonotebook import tqdm as notebook_tqdm\n"
+          ]
+        },
+        {
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "WARNING:tensorflow:From c:\\Users\\Admin\\OneDrive\\Escritorio\\TFG\\.venv\\lib\\site-packages\\tf_keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+            "\n",
             "32822\n",
-            "100\n",
+            "2000\n",
             "Cartas guardadas en outputFiles/HS/HSParsedCards.json\n"
           ]
         }
